# ecuda

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST  Makefile  Makefile.legacy  README  algorithm_8hpp.html  algorithm_8hpp_source.html  allocators_8hpp.html  allocators_8hpp_source.html  annotated.html  apiwrappers_8hpp.html  apiwrappers_8hpp_source.html  array_8hpp.html  array_8hpp_source.html  classecuda_1_1array-members.html  classecuda_1_1array.html  classecuda_1_1contiguous__device__iterator-members.html  classecuda_1_1contiguous__device__iterator.html  classecuda_1_1contiguous__matrix__view-members.html  classecuda_1_1contiguous__matrix__view.html  classecuda_1_1contiguous__sequence__view-members.html  classecuda_1_1contiguous__sequence__view.html  classecuda_1_1cube-members.html  classecuda_1_1cube.html  classecuda_1_1cuda__error-members.html  classecuda_1_1cuda__error.html  classecuda_1_1device-members.html  classecuda_1_1device.html  classecuda_1_1device__allocator-members.html  classecuda_1_1device__allocator.html  classecuda_1_1device__contiguous__block__iterator-members.html  classecuda_1_1device__contiguous__block__iterator.html  classecuda_1_1device__contiguous__iterator-members.html  classecuda_1_1device__contiguous__iterator.html  classecuda_1_1device__iterator-members.html  classecuda_1_1device__iterator.html  classecuda_1_1device__pitch__allocator-members.html  classecuda_1_1device__pitch__allocator.html  (+210 more)
benchmark/: device_sequence.cu  matrix.cu
benchmarks/: CMakeLists.txt  array.cu  array_add_cuda.cu  array_add_ecuda.cu  config.hpp  matrix.cu  matrix_multiply.cu  matrix_rotate_cuda.cu  matrix_rotate_ecuda.cu  matrix_transpose.cu  vector.cu
docs/: mainpage.dox
include/: allocators.hpp  array.hpp  containers.hpp  global.hpp  iterators.hpp  matrix.hpp  memory.hpp
include/ecuda/: algorithm.hpp  allocators.hpp  apiwrappers.hpp  array.hpp  config.hpp  containers.hpp  cube.hpp  cuda_error.hpp  device.hpp  device_ptr.hpp  ecuda.hpp  ecuda.vcxproj  ecuda.vcxproj.filters  event.hpp  global.hpp  iterator.hpp  iterators.hpp  matrix.hpp  memory.hpp  models.hpp  numeric.hpp  padded_ptr.hpp  stack.hpp  striding_ptr.hpp  type_traits.hpp  utility.hpp  vector.hpp  views.hpp
include/ecuda/algo/: copy.hpp  count.hpp  count_if.hpp  equal.hpp  fill.hpp  find.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  lexicographical_compare.hpp  max_element.hpp  mismatch.hpp  reverse.hpp
include/ecuda/impl/: host_emulation.hpp  models.hpp
include/ecuda/model/: device_contiguous_matrix.hpp  device_contiguous_row_matrix.hpp  device_contiguous_sequence.hpp  device_fixed_sequence.hpp  device_matrix.hpp  device_sequence.hpp
include/ecuda/ptr/: common.hpp  naked_ptr.hpp  padded_ptr.hpp  shared_ptr.hpp  striding_padded_ptr.hpp  striding_ptr.hpp  unique_ptr.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  (+54 more)
t/: 1__allocators.cu  2__models__device_sequence.cu  3__algorithm__copy.cu  4__ptr__padded_ptr.cu  CMakeLists.txt  algorithm__fill.cu  allocators.cu  array.cu  matrix.cu  model__device_sequence.cu
test/: CMakeLists.txt  test_algorithms.cu  test_array.cu  test_backing.cu  test_ctors.cu  test_cube.cu  test_cube2.cu  test_iters.cu  test_matrix.cu  test_models.cu  test_ptr.cu  test_stack.cu  test_vector.cu
tools/: CMakeLists.txt  print_device_info.cu  tools.vcxproj
